ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2220,12 +2220,10 @@ img {
 	.container > .navbar-collapse {
 		float: right;
 		width: 50% !important;
-		background-color: red;
 	}
 	.navbar-nav {
 		float: right;
 		width: 100% !important;
-		background-color: pink;
 	}
 	.navbar-nav > li {
 		width: auto;
@@ -2233,6 +2231,7 @@ img {
 	.navbar-default .navbar-nav > li > a {
 		white-space: nowrap;
 		line-height: 28px;
+		padding: 16px 20px;
 	}
 	#controls,
 	.whiteAngle,
